--- a/apps/marvel-comics/src/app/view/index/comics-page/comics-page.component.scss
+++ b/apps/marvel-comics/src/app/view/index/comics-page/comics-page.component.scss
@@ -53,5 +53,12 @@
 }
 
 .comics-container[max-width~="700px"]{
-  flex-direction: column;
+  .list-filter{
+    position: absolute;
+    z-index: 99;
+
+    &.filter-expanded{
+      width: 40%;
+    }
+  }
 }
