--- a/apps/marvel-comics/src/app/view/index/dialog-comics-detail/dialog-comics-detail.component.html
+++ b/apps/marvel-comics/src/app/view/index/dialog-comics-detail/dialog-comics-detail.component.html
@@ -13,7 +13,7 @@
       </div>
     </div>
 
-    <span style="margin-top: 32px; font-size: 14px; color: #e2e2e8; text-align: justify">
+    <span style="margin-top: 32px; font-size: 14px; color: #e2e2e8; text-align: justify; max-height: 250px; overflow-y: scroll">
       {{data.item.description}}
     </span>
   </div>
